k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: vimazac/multi-worker
          env: # env variables must be strings
            - name: REDIS_HOST
              value: redis-cip-service
            - name: REDIS_PORT
              value: '6379'
