k8s/redis-cip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cip-service
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
